# Torq

./: .gitignore  Cargo.toml  README.md
libs/actors/: Cargo.toml
libs/actors/src/: bundle.rs  lib.rs  messages.rs  mod.rs  proof_of_concept.rs  registry.rs  system.rs  transport.rs
libs/amm/: Cargo.toml
libs/amm/src/: lib.rs  optimal_size.rs  pool_traits.rs  v2_math.rs  v3_math.rs
libs/codec/: Cargo.toml
libs/codec/benches/: error_performance.rs
libs/codec/examples/: performance_demo.rs  validation_demo.rs
libs/codec/src/: buffers.rs  builder.rs  constants.rs  error.rs  help.rs  instrument_id.rs  lib.rs  migration.rs  parser.rs  protocol_constants.rs  tlv_types.rs
libs/codec/src/protocol/: constants.rs  error.rs  mod.rs  relay_domain.rs  source_type.rs  tlv_type.rs
libs/codec/src/validation/: bounds.rs  builder.rs  checksum.rs  config.rs  mod.rs  validator.rs
libs/codec/tests/: codec_tests.rs  consolidation_integration.rs  critical_fixes_test.rs  error_formatting.rs  message_builder_integration.rs  parser_integration.rs
libs/config/: Cargo.toml
libs/config/src/: lib.rs  protocol.rs  service.rs  service_config.rs
libs/messaging/patterns/message_sink/: Cargo.toml
libs/messaging/relays/: Cargo.toml  README.md  RELAY_ORGANIZATION_ANALYSIS.md
libs/messaging/relays/core/: Cargo.toml
libs/messaging/relays/examples/: live_kraken_simple.rs  realistic_test_standalone.rs  simple_test.rs
libs/messaging/relays/src/: lib.rs
libs/network/: Cargo.toml  REORGANIZATION_ANALYSIS.md
libs/network/benches/: mycelium_performance.rs  protocol_v2_performance.rs
libs/network/src/: error.rs  lib.rs  message.rs  performance.rs
libs/network/src/discovery/: actors.rs  config.rs  deployment.rs  error.rs  mod.rs  nodes.rs  resolution.rs  runtime.rs  transport.rs  validation.rs
libs/network/src/protocol/: compression.rs  envelope.rs  mod.rs  security.rs
libs/network/src/recovery/: mod.rs  request.rs  snapshot.rs
libs/network/src/routing/: config.rs  hybrid.rs  latency.rs  mod.rs  strategy.rs  topology_aware.rs
libs/network/src/time/: lib.rs
libs/network/src/transports/: metrics.rs  mod.rs  pool.rs  tcp.rs  tests.rs  udp.rs  unix.rs
libs/network/tests/: consolidation_integration.rs  integration_tests.rs
libs/types/: Cargo.toml
libs/types/benches/: fixedvec_performance.rs  message_builder_comparison.rs  typed_id_performance.rs
libs/types/examples/: orderbook_example.rs  orderbook_simple.rs  zero_copy_demo.rs
libs/types/src/: lib.rs  messages.rs  precision.rs
libs/types/src/common/: errors.rs  fixed_point.rs  identifiers.rs  mod.rs
libs/types/src/protocol/: constants.rs  mod.rs
libs/types/tests/: gap_performance_validation.rs  gap_tlv_validation.rs  gap_validation.rs  integrity.rs  pool_liquidity_fixedvec_tests.rs  pool_liquidity_roundtrip.rs  pool_state_size_test.rs  protocol_core.rs  real_arbitrage_detection.rs  real_polygon_swaps.rs  recovery.rs  simple_test_orderbook.rs  state_invalidation_fixedvec_tests.rs  test_macro_syntax.rs  test_orderbook_fixedvec.rs  test_orderbook_macro.rs  test_pool_messages.rs  test_simple_macro.rs  test_tlv_macro.rs  test_zerocopy_generic.rs  tlv_parsing.rs  tlv_type_migration_validation.rs  zero_allocation_tests.rs  zero_copy_e2e_integration.rs  zero_copy_validation.rs  zerocopy_validation.rs
libs/types/tests/common/: mod.rs
libs/types/tests/debug/: find_pool_events.rs  track_pool_reserves.rs
libs/types/tests/integration/: e2e_collector_relay.rs  e2e_live_validation.rs  live_e2e_integration.rs  live_polygon_dex.rs  (+1 more)
scripts/: Cargo.toml  README.md  flash-arb-legacy.sh  flash-arb-with-pools.sh  flash-arb.sh  init-pool-cache.sh  install-git-hooks.sh  load-pools-to-cache.rs  manage.sh  populate-cache.py  populate-known-pools.sh  populate-pool-cache.rs  test-cache-persistence.py  validate-config.sh
scripts/adapters/: capture_coinbase_trades.py  generate_api_docs.sh  generate_rustdoc_json.sh
scripts/migration/: hot_swap_test.sh  production_sim_test.sh  rollback_test.sh  side_by_side_test.sh
scripts/patterns/: ci-integration.yml  detect-transport-violations.sh  run-all-pattern-checks.sh  transport-whitelist.txt
scripts/relays/: performance_validation.sh
scripts/tests/: test_manage_integration.sh  test_manage_unit.sh
scripts/tools/: query_tlv.sh
scripts/tools/rq/: Cargo.toml
scripts/tools/rq-simple/: Cargo.toml
services/adapters/: ADAPTER_CLEAN_ARCHITECTURE.md  Cargo.toml
services/adapters/benches/: message_processing.rs
services/adapters/coinbase_adapter/: Cargo.toml
services/adapters/config/: chains.json  mod.rs
services/adapters/dex_utils/: Cargo.toml
services/adapters/gas_price_collector/: Cargo.toml
services/adapters/pool_cache/: discovery.rs  mod.rs  non_blocking.rs
services/adapters/pool_metadata_adapter/: Cargo.toml
services/adapters/src/: circuit_breaker.rs  common.rs  config.rs  error.rs  latency_instrumentation.rs  lib.rs  rate_limit.rs  validation.rs
services/observability/dashboard/: Cargo.toml  config.toml
services/observability/health_check/: Cargo.toml
services/observability/trace_collector/: Cargo.toml
services/strategies/: Cargo.toml  STRATEGY_REORGANIZATION_ANALYSIS.md
services/strategies/flash_arbitrage/: Cargo.toml
services/strategies/kraken_signals/: Cargo.toml  config.toml
services/strategies/mev/: Cargo.toml
services/strategies/shared/: Cargo.toml
services/strategies/src/: lib.rs
services/strategies/state/: Cargo.toml
tests/architecture_validation/: Cargo.toml
tests/architecture_validation/src/: advanced_validations.rs  code_quality.rs  common.rs  dependency_validation.rs  lib.rs  main.rs  plugin_compliance.rs  typed_id_usage.rs
tests/e2e/: Cargo.toml
tests/e2e/golden_path/: arbitrage_golden_path.rs  gap_validation.rs  mod.rs
tests/e2e/src/: fixtures.rs  framework.rs  lib.rs  main.rs  scenarios.rs  validation.rs
tests/e2e/tests/: arbitrage_dashboard_e2e.rs  continuous_polygon_streaming.rs  full_pipeline_test.rs  integration_test.rs  polygon_arbitrage_validation.rs  polygon_live_streaming_validation.rs  signal_relay_integration.rs
(+610 files in other folders)
