[package]
name = "torq_relay_scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "start_market_data_relay"
path = "lib/deploy/start_market_data_relay.rs"

[[bin]]
name = "start_signal_relay" 
path = "lib/deploy/start_signal_relay.rs"

[[bin]]
name = "start_execution_relay"
path = "lib/deploy/start_execution_relay.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"