[package]
name = "messaging-actors"
version = "0.1.0"
edition = "2021"
description = "Actor-based message passing infrastructure for Torq"

[dependencies]
# Core dependencies
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Network transport layer
network = { workspace = true }

# Protocol and types
types = { workspace = true }
codec = { workspace = true }

# Error handling and logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.9"

# Utilities
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.7"
tempfile = "3.8"