[package]
name = "torq-amm"
version = "0.1.0"
edition = "2021"
authors = ["Torq Team"]

[dependencies]
anyhow = "1.0"
# aquamarine = { workspace = true }  # Documentation generation - removed for now
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
