[package]
name = "config"
version = "0.2.0"
edition = "2021"
description = "Centralized configuration and constants for Torq services"
license = "UNLICENSED"

[dependencies]
# For configuration serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# For lazy static initialization
once_cell = "1.19"

# Configuration management
config-crate = "0.14"
anyhow = "1.0"
tracing = "0.1"

# For environment variable expansion
shellexpand = "3.1"

# Collections are in std - no external crate needed

[dev-dependencies]
tempfile = "3.8"