[package]
name = "types"
version = "0.2.0"  # Version bump for major restructuring
edition = "2021"
description = "Unified type system for Torq Protocol V2 TLV messages and common types"

[lib]
name = "types"

[features]
default = ["protocol", "common", "typed-tlv-bridge", "messages"]
protocol = ["zerocopy", "crc32fast", "serde", "serde_json"]  # Protocol-specific deps
common = ["rust_decimal", "serde"]   # Common type deps

# Core protocol features
checksum-validation = ["crc32fast"]         # CRC32 checksums for message integrity
serialization = ["serde", "serde_json"]     # JSON serialization support
binary-protocol = []                        # Binary TLV protocol (always included)
typed-tlv-bridge = ["paste"]                # Typed TLV bridge macros

# Runtime and async support
runtime = ["tokio", "async-trait"]           # Async runtime support
observability = ["tracing", "tracing-subscriber"]  # Distributed tracing support
messages = ["runtime", "bincode", "tracing"] # Message system with actors

# Development and debugging
debug-tools = ["clap"]                # Debugging utilities and CLI tools
yaml-config = ["serde_yaml"]          # YAML configuration support

# Performance-focused feature sets
high-performance = ["binary-protocol"]               # Minimal features for speed
full-featured = [
    "checksum-validation",
    "serialization",
    "runtime",
    "observability",
    "debug-tools",
    "yaml-config",
]

[dependencies]
# Dependencies removed to break circular dependency
# codec and network functions should be imported directly by consumers
anyhow = "1.0"
async-trait = { version = "0.1", optional = true }

# Core dependencies (always available)
byteorder = "1.5" 
clap = { version = "4.0", features = ["derive"], optional = true }
once_cell = "1.0"  # Required for lazy static configuration

# Core serialization dependencies  
crc32fast = { version = "1.3", optional = true }
hex = "0.4"  # Always required for instrument IDs and trace formatting
num_enum = "0.7"
paste = { version = "1.0", optional = true }

# Common dependencies (from original types)
rust_decimal = { version = "1.32", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Optional dependencies controlled by features
serde_yaml = { version = "0.9", optional = true }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util", "time", "macros", "sync"], optional = true }
bincode = { version = "1.3", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

# Protocol dependencies (optional)
zerocopy = { version = "0.7", features = ["derive"], optional = true }

[dev-dependencies]
chrono = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
futures-util = "0.3"
hex = "0.4"
rust_decimal = "1.37.2"
serde_json = "1.0"
tempfile = "3.0"
tokio-test = "0.4"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
web3 = "0.19"

# Commented out to avoid circular dependency - should be moved to codec or separate crate
# [[bin]]
# name = "test_protocol"
# path = "src/protocol/bin/test_protocol.rs"

# Commented out remaining binaries to avoid circular dependency
# [[bin]]
# name = "debug_tlv_parsing"
# path = "src/protocol/bin/debug_tlv_parsing.rs"
# required-features = ["observability"]
#
# [[bin]]
# name = "test_fixed_parsing"
# path = "src/protocol/bin/test_fixed_parsing.rs"
# required-features = ["observability"]

[[bench]]
name = "message_builder_comparison"
harness = false

[[bench]]
name = "typed_id_performance"
harness = false
