[package]
name = "adapter-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Exchange data collection and distribution adapters for Torq trading system"

[[bin]]
name = "polygon"
path = "src/bin/polygon/polygon.rs"

[[bin]]
name = "binance"
path = "src/bin/binance/binance.rs"

[[bin]]
name = "kraken"
path = "src/bin/kraken/kraken.rs"

[[bin]]
name = "coinbase"
path = "src/bin/coinbase/coinbase.rs"

[[bin]]
name = "event_validator"
path = "src/bin/event_validator.rs"

[[bin]]
name = "benchmark_mpsc_elimination"
path = "src/bin/benchmark_mpsc_elimination.rs"

[[bin]]
name = "e2e_validation_consumer"
path = "src/bin/e2e_validation_consumer.rs"

[features]
default = []
strict-validation = []
metrics = ["prometheus"]

[dependencies]
dex = { workspace = true }
state-market = { workspace = true }
network = { workspace = true }
# Core protocol
types = { workspace = true }
codec = { workspace = true }
anyhow = { workspace = true }

# Documentation enhancements
aquamarine = { workspace = true }
async-trait = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
crc32fast = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
ethabi = { workspace = true }
futures-util = { workspace = true }

# Rate limiting
governor = { workspace = true }

# Utilities
hex = { workspace = true }
hex-literal = "0.4"
lazy_static = "1.4"

# Pool cache persistence
memmap2 = { workspace = true }
nonzero_ext = { workspace = true }
once_cell = { workspace = true }

# Metrics
prometheus = { version = "0.13", optional = true }

# HTTP client for REST fallbacks
reqwest = { workspace = true }
rust_decimal = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }

# Error handling and logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# Web3 and Ethereum
web3 = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
criterion = "0.5"
hex-literal = "0.4"
mockito = "1.5"
rand = "0.8"
rand_chacha = "0.3"
tempfile = "3.0"
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[test]]
name = "test_pool_cache_simple"
path = "test_pool_cache_simple.rs"

[[bench]]
name = "message_processing"
harness = false
