[package]
name = "architecture_validation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "architecture_validation"
path = "src/main.rs"

[dependencies]
# Core dependencies for parsing and validation
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# Path and file handling
walkdir = "2.4"
regex = "1.10"
glob = "0.3"

# Testing utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-test = "0.2"

# For parsing Rust code and analyzing dependencies
cargo_metadata = "0.18"
cargo-manifest = "0.15"

# For colored output in test failures
colored = "2.0"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"