[package]
name = "rq-simple"
version = "0.2.0"
edition = "2021"
description = "Simple Rust Query - semantic-aware grep for Rust codebases"

[[bin]]
name = "rq-simple"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.4"
colored = "2.1"
dirs = "5.0"

# Only for fuzzy matching - keep this since it's useful
fuzzy-matcher = "0.3"