[package]
name = "rq"
version = "0.1.0"
edition = "2021"
authors = ["Torq Team"]
description = "Rust Query - Fast codebase navigation and discovery tool"
license = "MIT"
repository = "https://github.com/torq/rq"
keywords = ["rustdoc", "navigation", "discovery", "query", "api"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "rq"
path = "src/main.rs"

[dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Directory paths
dirs = "5.0"
walkdir = "2.4"

# Fuzzy matching (keep this - it's useful)
fuzzy-matcher = "0.3"

# Colored output
colored = "2.1"

# Regex support
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
proptest = "1.4"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

# Benchmarks can be added later
# [[bench]]
# name = "query_performance"
# harness = false