[package]
name = "torq-coinbase-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
adapter-service = { workspace = true }
types = { workspace = true }
codec = { workspace = true }
tokio.workspace = true
async-trait.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono.workspace = true
anyhow.workspace = true

[[bin]]
name = "coinbase_adapter"
path = "src/bin/coinbase_adapter.rs"