[package]
name = "dex"
version = "0.1.0"
edition = "2021"

[dependencies]

# Protocol
types = { workspace = true }
# Core dependencies
anyhow = "1.0"

# Ethereum/Web3
ethabi = "18.0"
ethereum-types = "0.14"
once_cell = "1.18"
thiserror = "1.0"
tracing = "0.1"
web3 = "0.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
tokio = { version = "1.39", features = ["full"] }

[[bench]]
name = "performance"
harness = false
