[package]
name = "torq-gas-price-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Protocol
types = { workspace = true }
codec = { workspace = true }
network = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Ethereum
ethers = { version = "2.0", features = ["ws"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "gas_price_collector"
path = "src/bin/gas_price_collector.rs"