[package]
name = "torq-dashboard-websocket"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
network = { workspace = true }

# Protocol dependencies
types = { workspace = true }
codec = { workspace = true }
anyhow = "1.0"

# Base64 encoding
base64 = "0.22"

# Once cell for lazy statics
once_cell = "1.19"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Collections and concurrency
dashmap = "6.0"
futures-util = "0.3"

# Hex encoding
hex = "0.4"

# Metrics
metrics = "0.23"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
# Core dependencies
tokio = { version = "1.0", features = ["full"] }

# WebSocket server
tokio-tungstenite = "0.24"

# Configuration
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for client tracking
uuid = { version = "1.0", features = ["v4"] }

# HTTP server for WebSocket upgrade
warp = "0.3"

# Zero-copy serialization
zerocopy = "0.7"
