[package]
name = "torq-health-check"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
