[package]
name = "trace_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
network = { workspace = true }
# Protocol
types = { workspace = true }
codec = { workspace = true }
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections and sync
dashmap = "5.0"

# Hex encoding
hex = "0.4"
parking_lot = "0.12"

# Ring buffer
ringbuffer = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System info
sysinfo = "0.30"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling and logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Networking
url = "2.0"

# Utilities
once_cell = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
