[package]
name = "kraken-signals-strategy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kraken_signals"
path = "src/main.rs"

[dependencies]
torq-strategy-shared = { path = "../shared" }
codec = { path = "../../../libs/codec" }
types = { path = "../../../libs/types" }

# Strategy-specific dependencies
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"