[package]
name = "mev"
version = "0.1.0"
edition = "2021"
authors = ["Torq Team"]

[dependencies]
types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
