[package]
name = "torq-strategy-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { path = "../../../libs/codec" }
types = { path = "../../../libs/types" }

# Core dependencies
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"